<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyIPTV</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="playlist_url">Playlist URL (M3U)</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="channels">Channels</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="no_playlists">No playlists added yet</string>
    <string name="add_your_first">Add your first playlist to start watching</string>
    <string name="loading">Loading...</string>
    <string name="error_loading">Error loading playlist</string>
    <string name="delete">Delete</string>
    <string name="search_channels">Search channels...</string>
</resources>
